--- a/.github/workflows/rust-linux.yml
+++ b/.github/workflows/rust-linux.yml
@@ -2,8 +2,6 @@ name: Rust
 
 on:
   workflow_dispatch:
-    branches:
-      - 'master'
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,7 +13,7 @@ jobs:
 
     steps:
     - name: Install Dependencies
-      run: apt install -y rust nasm clang ffmpeg vapoursynth
+      run: sudo apt install -y rust nasm clang ffmpeg vapoursynth
     - name: Build
       run: cargo build --release
     - name: Create prerelease
